@@ -1,3 +1,9 @@
+2012-12-31 Riccardo Mottola <rm@gnu.org>
+
+	* AppController.m
+	* FileTable.m
+	Move directory recursion to FileTable class, accept directories in drag&drop.
+
 2012-12-25 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
